src/core-crm/objects/Application_Preference__c/Application_Preference__c.object-meta.xml
<CustomObject>
    <label>Application Preference</label>
    <nameField>
        <displayFormat>A-{000000000}</displayFormat>
        <label>Preference Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Preferences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>