src/core-crm/objects/Application_Preference__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Application</description>
    <label>Application</label>
    <referenceTo>hed__Application__c</referenceTo>
    <relationshipLabel>Application Preferences</relationshipLabel>
    <relationshipName>Application_Preferences</relationshipName>
    <type>Lookup</type>
</CustomField>