src/core-crm/objects/Application_Preference__c/fields/Faculty__c.field-meta.xml
<CustomField>
    <fullName>Faculty__c</fullName>
    <description>The Faculty and owns and administers the Course in preference</description>
    <label>Faculty</label>
    <length>255</length>
    <type>Text</type>
</CustomField>