src/core-crm/objects/Application_Preference__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>The QTAC Application is still active</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>