src/core-crm/objects/Application_Preference__c/fields/Is_Current_Preference__c.field-meta.xml
<CustomField>
    <fullName>Is_Current_Preference__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The Preference being currently processed for admission</description>
    <label>Is Current Preference</label>
    <type>Checkbox</type>
</CustomField>