src/core-crm/objects/Application_Preference__c/fields/Migration_ID__c.field-meta.xml
<CustomField>
    <fullName>Migration_ID__c</fullName>
    <description>used for data migration  data movement framework</description>
    <label>Migration ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>