src/core-crm/objects/Application_Preference__c/fields/Migration_Key__c.field-meta.xml
<CustomField>
    <fullName>Migration_Key__c</fullName>
    <description>used for migrated Data External Key</description>
    <label>Migration Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>