src/core-crm/objects/Application_Preference__c/fields/Preference_Number__c.field-meta.xml
<CustomField>
    <fullName>Preference_Number__c</fullName>
    <description>The Preference Order assigned to the Program by applicant</description>
    <label>Preference Number</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>