src/core-crm/objects/Application_Preference__c/fields/Program_ID__c.field-meta.xml
<CustomField>
    <fullName>Program_ID__c</fullName>
    <description>The identifier assigned to the Course</description>
    <label>Program ID</label>
    <precision>13</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>