src/core-crm/objects/Application_Preference__c/fields/Program_Name__c.field-meta.xml
<CustomField>
    <fullName>Program_Name__c</fullName>
    <description>The Name given to the Course</description>
    <label>Program Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>