src/core-crm/objects/Application_Preference__c/fields/QTAC_Program_Level__c.field-meta.xml
<CustomField>
    <fullName>QTAC_Program_Level__c</fullName>
    <description>QTAC Program Level</description>
    <label>QTAC Program Level</label>
    <length>80</length>
    <type>Text</type>
</CustomField>