src/core-crm/objects/Application_Preference__c/fields/QUT_Faculty_Name__c.field-meta.xml
<CustomField>
    <fullName>QUT_Faculty_Name__c</fullName>
    <description>The Name of the QUT Faculty recieved from QTAC</description>
    <label>QUT Faculty Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>