src/core-crm/objects/Application_Preference__c/fields/QUT_Program__c.field-meta.xml
<CustomField>
    <fullName>QUT_Program__c</fullName>
    <description>QUT Course Corresponding to QTAC preference</description>
    <label>QUT Program Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>