src/core-crm/objects/Application_Preference__c/fields/Starting_Month__c.field-meta.xml
<CustomField>
    <fullName>Starting_Month__c</fullName>
    <description>Starting month of the intake period that the preference is related to.</description>
    <label>Starting Month</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>