src/core-crm/objects/Application_Preference__c/fields/Study_Mode__c.field-meta.xml
<CustomField>
    <fullName>Study_Mode__c</fullName>
    <description>The Study mode of the preference</description>
    <label>Study Mode</label>
    <length>80</length>
    <type>Text</type>
</CustomField>