src/core-crm/objects/Application_Preference__c/recordTypes/QTAC.recordType-meta.xml
<RecordType>
    <fullName>QTAC</fullName>
    <active>true</active>
    <label>QTAC</label>
</RecordType>